# ocaml-dockerfile

src/: dockerfile.ml  dockerfile.mli
src-opam/: linux.ml  linux.mli  opam.ml  opam.mli
test-cmd/: dune  genall.ml
